# TheNewTiptrisRecomp

./: .gitignore  CMakeLists.txt  FUNCTION_COMPLEXITY.md  FUNCTION_INDEX.md  README.md  TODO.md  executable.cmake  gen_syms.py  n_aspMain.us.toml  tnt.syms.toml  tnt.us.toml
.github/workflows/: release.yml
RecompiledFuncs/: Audio.c  Audio2.c  BoardP.c  Color.c  Credits.c  Cube.c  CubeTiles.c  CurrentPiece.c  EndScroller.c  FallingCubes.c  FrameAct.c  Game.c  GameStats.c  Garbage.c  GhostPiece.c  KeySpin.c  Landfill.c  LineScan.c  Minos.c  MobilePiece.c  Multisquare.c  NextPieces.c  PFGFX.c  PieceHold.c  Tetris.c  _libultra.c  aisquarelist.c  displayText.c  funcs.h  funcs_0.c  funcs_1.c  funcs_10.c  funcs_11.c  funcs_12.c  funcs_13.c  funcs_14.c  funcs_15.c  funcs_16.c  funcs_17.c  funcs_18.c  (+26 more)
RecompiledFuncs/Bag63/: Bag63.c
RecompiledFuncs/Board/: Board.c
RecompiledFuncs/BoardP/: BoardP.c
RecompiledFuncs/BoardPieces/: BoardPieces.c
RecompiledFuncs/Color/: Color.c
RecompiledFuncs/Dcm/: Dcm.c
RecompiledFuncs/Font/: Font.c
RecompiledFuncs/FrameAct/: FrameAct.c
RecompiledFuncs/Garbage/: Garbage.c
RecompiledFuncs/GhostPiece/: GhostPiece.c
RecompiledFuncs/KeySpin/: KeySpin.c
RecompiledFuncs/Landfill/: Landfill.c
RecompiledFuncs/LineEffect/: LineEffect.c
RecompiledFuncs/MobilePiece/: MobilePiece.c
RecompiledFuncs/Multisquare/: Multisquare.c
RecompiledFuncs/MultisquareGlow/: MultisquareGlow.c
RecompiledFuncs/Multisquares/: Multisquares.c
RecompiledFuncs/PieceHoldPiece/: PieceHoldPiece.c
RecompiledFuncs/SaveData/: SaveData.c
RecompiledFuncs/_libultra/: _libultra.c
RecompiledFuncs/ai/: aiplayer.c  aisquarelist.c
RecompiledFuncs/audio/: Audio.c  Audio2.c  Dcm.c
RecompiledFuncs/core/: FrameAct.c  Game.c  Tetris.c  main.c
RecompiledFuncs/debug/: debug.c
RecompiledFuncs/displayText/: displayText.c
RecompiledFuncs/frametime/: frametime.c
RecompiledFuncs/gamefinish/: gamefinish.c
RecompiledFuncs/gameplay/: Bag63.c  Board.c  BoardP.c  BoardPieces.c  CurrentPiece.c  Garbage.c  GarbageFx.c  GhostPiece.c  Ids.c  KeySpin.c  Landfill.c  LineEffect.c  LineScan.c  Mino.c  MobileCubes.c  MobilePiece.c  Multisquare.c  MultisquareGlow.c  Multisquares.c  NextPiece.c  NextPieceShadow.c  NextPieces.c  PV.c  PauseMenu.c  PieceHold.c  PieceHoldPiece.c
RecompiledFuncs/get/: get.c
RecompiledFuncs/graphics/: Color.c  CubeTiles.c  Font.c  GarbageImg.c  ImageRect.c  Minos.c  PFGFX.c  Particle.c  Smoke.c  displayText.c
RecompiledFuncs/h2o/: h2o.c
RecompiledFuncs/lzo/: lzo.c
RecompiledFuncs/lzo1x/: lzo1x.c
RecompiledFuncs/main/: main.c
RecompiledFuncs/modes/: Credits.c  EndScroller.c  gamefinish.c  wonders1.c  wonders3.c  wonders4.c
RecompiledFuncs/strutil/: strutil.c
RecompiledFuncs/system/: Bitstream.c  SaveData.c  _libultra.c  debug.c  frametime.c  lzo1x.c  mtx4.c  n64Heap.c  strutil.c  vec3.c
RecompiledFuncs/wonders1/: wonders1.c
RecompiledFuncs/wonders2/: wonders2.c
RecompiledFuncs/wonders3/: wonders3.c
RecompiledFuncs/wonders4/: wonders4.c
assets/: recomp.rcss
docs/: naming-campaign-plan.md  recompiled-hierarchy-plan.md
packaging/: RUN.txt  TheNewTiptris.desktop  package-linux.sh  package-windows.ps1
patches/: ui_funcs.h
src/: main.cpp  register_overlays.cpp  stubs.cpp
tools/: callgraph.py  complexity.py  coverage.py  reorganize_recompiled.py  verify.sh
